[package]
name = "weatherkit-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtokens = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
tz-search = "0.1"
format_num = "0.1.0"
pad = "0.1.6"
chrono = "0.4.19"
chrono-tz = "0.6.1"
