[package]
name = "weatherkit"
authors = [ "boB Rudis (@hrbrmstr)" ]
description = "Print Apple WeatherKit REST API weather conditions and hourly/daily foreacast to the console."
license = "MIT"
homepage = "https://github.com/hrbrmstr/weatherkit-rust"
repository = "https://github.com/hrbrmstr/weatherkit-rust"
keywords = [ "darksky", "weather", "weatherkit" ]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtokens = "1"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
tz-search = "0.1"
format_num = "0.1.0"
pad = "0.1.6"
chrono = "0.4.19"
chrono-tz = "0.6.1"
colored = "2"
clap = { version = "3.1.18", features = ["derive"] }
app_dirs2 = "2.5.0"
pickledb = "*"
log = "0.4"
simple_logger = "*"